--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ header {
 nav {
     position: absolute;
     top: 30px;
-    left: 500px;
+    left: 60%;
+    line-height: -20px;
     color: #777777;
     
     
@@ -37,6 +38,7 @@ nav {
 #abt {
     display: inline;
     float: left;
+    color: #777777;
     padding-right: 10px;
     border-right: 1px solid;
     font-family: Arial, Helvetica, sans-serif;
@@ -45,6 +47,7 @@ nav {
 #port {
     display: inline;
     float: left;
+    color: #777777;
     padding-right: 10px;
     padding-left: 10px;
     border-right: 1px solid;
@@ -53,6 +56,7 @@ nav {
 
 #cont {
     display: inline;
+    color: #777777;
     padding-left: 10px;
     float: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -93,6 +97,7 @@ h2 {
 
 p {
     font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
 }
 
 #img {
@@ -107,13 +112,15 @@ footer {
     position: absolute;
     top: 700px;
     width: 100%;
+    padding: 20px;
     background-color: #666666;
     border-top: 6px solid;
     border-top-color: #4aaaa5;
     color: #fff;
-
-
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+
 
 .clearfix::after {
     Display: block;
