--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,17 +1,17 @@
 header {
-    
+    position: relative;
+    left: 50px;
     padding-right: 10px;
     padding-left: 10px;
     font-size: 16px;
     float: left;
-    margin: 0;
+    margin: 0 auto 0 auto;
     text-align: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color: #fff;
     background:#4aaaa5;
-    z-index: 2;
-    
-    
+    border-bottom-color: #777777;
+    border-bottom: 2px ;  
 }
 
 nav {
@@ -25,14 +25,12 @@ nav {
 }
 
 #head {
-    position: absolute;
+    float: left;
     top:0;
     width: 100%;
-    margin: 0;
-    left: 100px;
+    margin: 0 auto 0 auto;
     border-bottom-color: #777777;
     border-bottom: 2px solid;
-
 
 }
 #abt {
@@ -55,6 +53,7 @@ nav {
 }
 
 #cont {
+    
     display: inline;
     color: #777777;
     padding-left: 10px;
@@ -63,25 +62,50 @@ nav {
     
 }
 
-
-
-
 .wrapper {
+    
     width:100%;
-    height: 600px;
-    margin: 0px;
-    background-color: #eeee;
-    position: absolute;
+    height: 800px;
+    margin-top: 0px;
+    margin-right: 0 auto;
+    margin-bottom: 0px;
+    margin-left: 0 auto;
+    background-color: #eee;
+    position: relative;
     top: 100px;
-    z-index: 1;
+  
 }
 
 #content {
     position:relative;
     top: 30px;
-    line-height: 20px;
-    width: 600px;
-    height: 500px;
+    line-height: 40px;
+    width: 75%;
+    height: 700px;
+    border: 30px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
+    margin: 0 auto;
+    background-color:#fff;
+}
+
+.wrapper3 {
+    width:100%;
+    height: 1000px;
+    margin: 0 auto 0 auto;
+    background-color: #eeee;
+    position: relative;
+    top: 100px;
+  
+}
+
+#content3 {
+    position:relative;
+    top: 30px;
+    width: 75%;
+    height: 900px;
     border: 30px;
     padding: 20px;
     margin: 0 auto;
@@ -100,18 +124,123 @@ p {
     color: #777777;
 }
 
+.prj1 {
+    position: absolute;
+    top:250px;
+    left:20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    background:#4aaaa5;
+    border-bottom-color: #777777;;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-bottom: 0px;
+    padding-left:5px;
+    width: 190px;
+    height: 40px;
+
+}
+
+.prj2 {
+    position: absolute;
+    top:480px;
+    left:20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    background:#4aaaa5;
+    border-bottom-color: #777777;;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-bottom: 0px;
+    padding-left:5px;
+    width: 190px;
+    height: 40px;
+
+}
+
+.prj3 {
+    position: absolute;
+    top:705px;
+    left:20px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    background:#4aaaa5;
+    border-bottom-color: #777777;;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-bottom: 0px;
+    padding-left:5px;
+    width: 190px;
+    height: 40px;
+
+}
+
+.prj4 {
+    position: absolute;
+    top:253px;
+    right:166px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    background:#4aaaa5;
+    border-bottom-color: #777777;;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-bottom: 0px;
+    padding-left:5px;
+    width: 190px;
+    height: 40px;
+
+}
+
+.prj5 {
+    position: absolute;
+    top:479px;
+    right:166px;
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #fff;
+    background:#4aaaa5;
+    border-bottom-color: #777777;;
+    padding-top: 20px;
+    padding-right: 5px;
+    padding-bottom: 0px;
+    padding-left:5px;
+    width: 190px;
+    height: 40px;
+
+}
+
 #img {
-    float: left;
+   float: left;
     padding-right: 20px;
     padding-bottom: 20px;
     
 }
+.row {
+    column-count: 2;
+    column-gap: 0px;
+    column-rule-width: 1px;
+   
+  }
+
+  .column img {
+    position: relative;
+    margin-top: 8px;
+    padding-right: 15px;
+    padding-bottom: 15px;
+    vertical-align: left;
+  }
 
 footer {
     text-align: center;
-    position: absolute;
+    position: relative;
     top: 700px;
     width: 100%;
+    margin:0 auto;
     padding: 20px;
     background-color: #666666;
     border-top: 6px solid;
@@ -119,12 +248,3 @@ footer {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
-.clearfix::after {
-    Display: block;
-    Clear: both;
-
-}
-
