--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ header {
     color: #fff;
     background:#4aaaa5;
     border-bottom-color: #777777;
-    border-bottom: 1px ;  
+    
 }
 
 nav {
@@ -22,11 +22,10 @@ nav {
     line-height: -20px;
     color: #777777;
     
-    
 }
 
 #head {
-    height: 80px;
+    height: ;
     float: left;
     top:0;
     width: 100%;
@@ -40,9 +39,9 @@ nav {
     width:100%;
     height: 900px;
     margin-top: 0px;
-    margin-right: 0 auto;
+    margin-right: 0 ;
     margin-bottom: 0px;
-    margin-left: 0 auto;
+    margin-left: 0 ;
     background-color: #eee;
     position: relative;
     top: 100px;
@@ -64,7 +63,7 @@ nav {
     background-color:#fff;
 }
 
-.wrapper3 {
+.wrapper2 {
     width:100%;
     height: 1000px;
     margin: 0 auto 0 auto;
@@ -74,13 +73,41 @@ nav {
   
 }
 
-#content3 {
+#content2 {
     position:relative;
     top: 30px;
     width: 75%;
     height: 900px;
     border: 30px;
     padding: 20px;
+    margin: 0 auto;
+    background-color:#fff;
+}
+
+.wrapper3 {
+    
+    width:100%;
+    height: 900px;
+    margin-top: 0px;
+    margin-right: 0 ;
+    margin-bottom: 0px;
+    margin-left: 0 ;
+    background-color: #eee;
+    position: relative;
+    top: 100px;
+}
+
+#content3 {
+    position:relative;
+    top: 30px;
+    line-height: 40px;
+    width: 75%;
+    height: 800px;
+    border: 30px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-bottom: 10px;
+    padding-left: 20px;
     margin: 0 auto;
     background-color:#fff;
 }
@@ -129,9 +156,9 @@ input {
 }
 
 .prj1 {
-    position: absolute;
-    top:250px;
-    left:20px;
+    position: relative;
+    top:-120px;
+    left:0px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -147,9 +174,9 @@ input {
 }
 
 .prj2 {
-    position: absolute;
-    top:480px;
-    left:20px;
+    position: relative;
+    top:-115px;
+    left:0px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -165,9 +192,9 @@ input {
 }
 
 .prj3 {
-    position: absolute;
-    top:705px;
-    left:20px;
+    position: relative;
+    top:-115px;
+    left:0px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -183,9 +210,9 @@ input {
 }
 
 .prj4 {
-    position: absolute;
-    top:253px;
-    right:166px;
+    position: relative;
+    top:-115px;
+    right:0px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -201,9 +228,9 @@ input {
 }
 
 .prj5 {
-    position: absolute;
-    top:479px;
-    right:166px;
+    position: relative;
+    top:-115px;
+    right:0px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     color: #fff;
@@ -219,9 +246,10 @@ input {
 }
 
 #img {
+    position: relative;
    float: left;
     padding-right: 20px;
-    padding-bottom: 20px;
+   
     
 }
 .row {
@@ -252,3 +280,29 @@ footer {
     color: #fff;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+@media screen and (max-width:768px) {
+
+    .wrapper {
+        height: 2000px;
+    }
+
+    #content {
+        height:1500px;
+    }
+
+    .wrapper2 {
+        height: 1000px;
+    }
+
+    #content2 {
+        height: 900px;
+    }
+
+    .wrapper3 {
+        height: 900px;
+    }
+
+    #content3 {
+        height: 800px;
+    }
